Modify cards to match template

--- a/index.html
+++ b/index.html
@@ -65,15 +65,58 @@
   </header>
   <body>
     <section class="container">
-      
+      <article class="mt-5">
+        <div class="card w-100%">
+          <div class="card-body d-flex flex-row">
+            <img
+              src="./images/snapshoot-portfolio.svg"
+              alt="portfolio images3"
+            />
+
+            <div class="d-flex flex-column justify-content-ms-end">
+              <h5 class="card-title ms-4 fs-2">Tonic</h5>
+              <ul class="list-inline-itemt">
+                <li class="list-inline-item text-black fs-3">CANOPY</li>
+                <li class="list-inline-item">
+                  <img src="./images/counter.png" alt="dot" />
+                </li>
+                <li class="list-inline-item text-black-50">Back End Dev</li>
+                <li class="span list-inline-item">
+                  <img src="./images/counter.png" alt="dot" />
+                </li>
+                <li class="list-inline-item text-black-50">2015</li>
+              </ul>
+              <p class="card-text ms-4 fs-4">
+                A daily selection of privately personalized reads; no
+                accounts<br />
+                or sign-ups required.
+              </p>
+              <ul class="list-inline-item">
+                <li class="list-inline-item">
+                  <img src="images/html.png" alt="html" />
+                </li>
+                <li class="list-inline-item">
+                  <img src="images/css.png" alt="css" />
+                </li>
+                <li class="list-inline-item">
+                  <img src="images/javascript.png" alt="js" />
+                </li>
+              </ul>
+              <button type="button" class="btn btn-primary col-4 ms-4">
+                See project
+              </button>
+            </div>
+          </div>
+        </div>
+      </article>
 
       <article class="mt-5">
         <div class="card w-100%">
           <div class="card-body d-flex flex-row">
             <div class="d-flex flex-column justify-content-ms-start">
-              <h5 class="card-title ms-4">Multi-Post Stories</h5>
+              <h5 class="card-title ms-4 fs-2">Multi-Post Stories</h5>
               <ul class="list-inline-item">
-                <li class="list-inline-item text-black">FACEBOOK</li>
+                <li class="list-inline-item text-black fs-3">FACEBOOK</li>
                 <li class="list-inline-item">
                   <img src="./images/counter.png" alt="dot" />
                 </li>
@@ -83,7 +126,7 @@
                 </li>
                 <li class="list-inline-item text-black-50">2015</li>
               </ul>
-              <p class="card-text ms-4">
+              <p class="card-text ms-4 fs-4">
                 Experimental content creation feature that allows users to<br />
                 add to an existing story over the course of a day without<br />
                 spamming their friends.
@@ -123,9 +166,9 @@
             />
 
             <div class="d-flex flex-column justify-content-ms-end">
-              <h5 class="card-title ms-4">Tonic</h5>
+              <h5 class="card-title ms-4 fs-2">Tonic</h5>
               <ul class="list-inline-itemt">
-                <li class="list-inline-item text-black">CANOPY</li>
+                <li class="list-inline-item text-black fs-3">CANOPY</li>
                 <li class="list-inline-item">
                   <img src="./images/counter.png" alt="dot" />
                 </li>
@@ -135,7 +178,7 @@
                 </li>
                 <li class="list-inline-item text-black-50">2015</li>
               </ul>
-              <p class="card-text ms-4">
+              <p class="card-text ms-4 fs-4">
                 A daily selection of privately personalized reads; no
                 accounts<br />
                 or sign-ups required.
@@ -166,9 +209,9 @@
         <div class="card w-100%">
           <div class="card-body d-flex flex-row">
             <div class="d-flex flex-column justify-content-ms-start">
-              <h5 class="card-title ms-4">Multi-Post Stories</h5>
+              <h5 class="card-title ms-4 fs-2">Multi-Post Stories</h5>
               <ul class="list-inline-item">
-                <li class="list-inline-item text-black">FACEBOOK</li>
+                <li class="list-inline-item text-black fs-3">FACEBOOK</li>
                 <li class="list-inline-item">
                   <img src="./images/counter.png" alt="dot" />
                 </li>
@@ -178,7 +221,7 @@
                 </li>
                 <li class="list-inline-item text-black-50">2015</li>
               </ul>
-              <p class="card-text ms-4">
+              <p class="card-text ms-4 fs-4">
                 Experimental content creation feature that allows users to<br />
                 add to an existing story over the course of a day without<br />
                 spamming their friends.
