--- a/index.html
+++ b/index.html
@@ -253,7 +253,83 @@
       </article>
     </section>
 
-    <main></main>
+    <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center bg-white my-5 p-3 rounded">
+      <section id="About bg-white"
+        style="width: 100%; background-color: #ffff; padding-top: 100px; border-top-right-radius: 100px;">
+        <div class="container d-md-flex justify-content-between py-5">
+          <div class="col-md-5">
+            <h1 class="font-weight-bold text-dark fs-1 col col-lg-4">
+              About Myself
+            </h1>
+            <p>
+              I'm a software developer! I can help you build a product ,feature or
+              website. Look through some of my work and experience! if you like
+              what you see and have a project you need coded, don't hesitate to
+              contact me.
+            </p>
+            <p class="connect">LET'S CONNECT</p>
+            <div class="social-network">
+              <img class="p-2" src="./images/github.svg" alt="github" />
+              <img class="p-2" src="./images/linkedin.svg" alt="linkedin" />
+              <img class="p-2" src="./images/vector.svg" alt="angel list" />
+              <img class="p-2" src="./images/twitter.svg" alt="twitter" />
+              <img class="p-2" src="./images/m.svg" alt="medium" />
+            </div>
+  
+  
+            <div class="resume-button">
+              <button
+                class="bg-white border border-primary my-5 p-3 text-primary rounded"
+                type="button">
+                Get my resume
+              </button>
+            </div>
+          </div>
+           <div>
+           <ul class="list-inline-item">
+             <li class="list-inline-item">Languages</li>
+             <li class="list-inline-item"><img src="./images/union.svg" alt="arrow"></li>
+           </ul>
+           <div class="d-lg-flex flex-row">
+              <ul class="list-inline-item">
+                <li class="list-inline-item"><img src="images/javascript.png" alt="javascript"></li>    
+                <li class="list-inline-item">javascript</li>
+              </ul>
+              <ul class="list-inline-item">
+                <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+                <li class="list-inline-item">HTML</li>
+              </ul>
+              <ul class="list-inline-item">
+             <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+             <li class="list-inline-item">css</li>
+            </ul>
+            </div>
+           </div>
+        </div>
+
+        <div>
+          <div class="d-flex flex-column align-items-center">
+          <h2> Contact Me</h2>
+          <p class="text-center">If you have an application you are interested in developing,<br> 
+            a feature that you need built or a project that needs coding.<br>
+             I’d love to help with it </p>
+          </div>
+             <form class="d-flex flex-column align-items-center">
+               <label for="name"></label>
+               <input type="text" id="name" name="username" placeholder="Enter your name">
+               <br>
+               <label for="email"></label>
+               <input type="email" id="email" name="useremail" placeholder="example@mail.com">
+               <br>
+               <label for="textarea"></label>
+               <textarea>Enetr your message</textarea>
+               <br>
+               <label for="button"></label>
+               <button>Get in Touch</button>
+
+             </form>
+        </div>
+        </section>
     <script src="js/bootstrap.css"></script>
   </body>
 </html>
